set overflow-x to auto to avoid the scrollbar displaying on large screens

--- a/blog/html/css/style.css
+++ b/blog/html/css/style.css
@@ -15,7 +15,7 @@ h1, h2, h4 { margin: 7px 0px; }
     margin: 15px 0px;
     border-bottom: 1px solid rgba(0,0,0,0.2);
 }
-pre, code, .codehilite { max-width:  100%; overflow-x: scroll }
+pre, code, .codehilite { max-width:  100%; overflow-x: auto }
 img, .center { display: block; margin: 0px auto; text-align: center; }
 
 @media only screen and (max-width: 1000px) {
